--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>This is a test page</p>
     <h1>Karen is in the house! hahaha</h1>
+    <h2>karen is adding something too at the same time as lamar is</h2>
 </body>
 </html>
