--- a/index.html
+++ b/index.html
@@ -1,13 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+    <meta name="viewport"
+        content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="stylesheet" href="css/themes/Comic_book_theme_2.css" />
+    <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
+    <link rel="stylesheet" href="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="js/jquery/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Phishing Quiz</title>
 </head>
-<body>
-    <p>This is a test page</p>
-    <P>This is a test to see if I get a merge issue</P>
-   </body>
+
+<body class="ui-body">
+
+    <!-- Welcome Page Start -->
+    <section data-theme="c" data-role="page" id="pgWelcome" data-fullscreen="true">
+        <!-- Navbar setup Start -->
+        <header data-role="header" data-position="fixed">
+            <h1>227 InfoSec</h1>
+        </header>
+        <article>
+            <div class="img-container">
+                <p>This page is the initial page--essentially the index.html</p>
+                <img class="responsiveImage" src="Need Image" alt="Welcome-logo" width="300" height="400">
+            </div>
+
+            <div class="userBtns">
+                <a href="#pgSignUp"><button>Sign Up</button></a>
+            </div>
+        </article>
+        <footer data-role="footer" data-position="fixed">
+            <h4>Copyright 227 InfoSec, Inc.&copy; 2022</h4>
+        </footer>
+
+    </section>
+
+    <!-- Home Page Start -->
+    <section data-theme="c" data-role="page" id="pgInstructions" data-fullscreen="true">
+        <!-- Navbar setup Start -->
+        <header data-role="header">
+            <h1>The Phishing Quiz</h1>
+            <a href="#pgOptions" data-icon="gear" class="ui-btn-right">Options</a>
+            <P>This is the instructions page</P>
+            <nav data-role="navbar">
+                <ul>
+                    <li><a href="#pgView" data-icon="bars" class="ui-btn-icon-bottom navView"
+                            data-transition="fade">Start Quiz</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Home Page Body Start -->
+        <main>
+            <article role="main" class="ui-content">
+                <h3>Phishing Quiz Instrutions Page</h3>
+            </article>
+            <div>
+                <img src="images/SuperHero_Helper_2.svg" width="132" height="200" alt="SuperHelper">
+            </div>
+            <p id="usageStatement"> Try to identify legited vs phising emails
+                Be sure to select all suspect areas of the email
+            </p>
+        </main>
+        <div>
+            <h4>Let's get to work. Start by selecting "Save"! </h4>
+        </div>
+
+        <!-- Footer Start -->
+        <footer data-role="footer" data-position="fixed">
+            <h4>Copyright &copy; 2020</h4>
+        </footer>
+    </section>
+
+    <!-- Sign Up Page Start -->
+    <section data-role="page" id="pgSignUp" data-theme="c" data-fullscreen="true">
+        <header data-role="header">
+            <h1>User Registration Page</h1>
+        </header>
+        <p>Enter your name and email. Failure to do so will result in recieving no credit.</p>
+        <main>
+            <article role="main" class="ui-content">
+                <form id="mySignUpForm">
+                    <fieldset>
+                        <label for="">First Name</label>
+                        <input id="fName" type="text">
+                        <label for="">Last Name</label>
+                        <input id="lName" type="text">
+
+                        <label for="Your Email">Email Address</label>
+                        <input id="uEmail" type="email">
+
+                    </fieldset>
+
+                    <button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-action" id="uSignUpBtn"
+                        type="submit">Start Quiz</button>
+                        <!-- This should take them to instructions page -->
+                </form>
+            </article>
+        </main>
+
+        <footer data-role="footer" data-position="fixed">
+            <h4>Copyright &copy; 2020</h4>
+        </footer>
+    </section>
+
+
+
+</body>
+
+<script src="js/pouchDB-7.2.1/pouchdb-7.2.1.min.js"></script>
+<script src="js/scripts.js"></script>
+
 </html>
