added pouchDB CDN for registration to work

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="ui-body">
 
-    <!-- Welcome Page Start -->
+    <!-- Welcome Page Start WELCOME-->
     <section data-theme="c" data-role="page" id="pgWelcome" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header" data-position="fixed">
@@ -49,7 +49,7 @@
 
     </section>
 
-    <!-- Sign Up Page Start -->
+    <!-- Sign Up Page Start REGISTRATION-->
     <section data-role="page" id="pgSignUp" data-theme="c" data-fullscreen="true">
         <header data-role="header">
             <h1>User Registration Page</h1>
@@ -81,7 +81,7 @@
         </footer>
     </section>
 
-    <!-- Home Page Start -->
+    <!-- Home Page Start INSTRUCTIONS -->
     <section data-theme="c" data-role="page" id="pgInstructions" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
@@ -112,7 +112,7 @@
 
 </body>
 
-<script src="js/pouchDB-7.2.1/pouchdb-7.2.1.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
 <script src="js/scripts.js"></script>
 
 
