--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <link rel="stylesheet" href="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" />
     <!-- <script src="js/jquery/jquery-1.11.1.min.js"></script> -->
     <script src="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
-    <link rel="stylesheet" href="css/style.css">
 
     <!-- jquery cdn files -->
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -38,7 +40,8 @@
                 <p>Welcome to the 227 InfoSec phishing training quiz. You will need to register with your name and
                     email. This registration will be used to record your quiz results. Please select the "Sign Up"
                     button to register.</p>
-                <img class="responsiveImage" src="Need Image" alt="Welcome-logo" width="300" height="400">
+                <img class="responsiveImage" src="Need Image" alt="Welcome-logo" >
+                <!-- width="300" height="400" -->
             </div>
 
             <div class="userBtns">
@@ -94,9 +97,9 @@
         <main>
 
 
-            <P>You will be presented a number of emails. Some of these emails will be legitimate and some of them will
+            <p>You will be presented a number of emails. Some of these emails will be legitimate and some of them will
                 be examples of phishing. Your job is to identify the parts of the emails that are suspect and determine
-                the appropriate action..</P>
+                the appropriate action.</p>
             <nav data-role="navbar">
 
                 <button><a href="#pgQuestion01" data-icon="bars" class="ui-btn-icon-bottom navView"
@@ -118,7 +121,7 @@
         <header data-role="header">
             <h1>The Phishing Quiz</h1>
 
-            <P>Insert Questions Here</P>
+            <p>Insert Questions Here</p>
         </header>
 
         <!-- Home Page Body Start -->
@@ -151,9 +154,31 @@
         <!-- Quiz Nav -->
         <main>
 
-            <div>
-                <P>this is where the quiz email will go</P>
+            <div class="em-template">
+                <div class="em-nav">
+                    <ul>
+                      <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
+                      <li><a href="/replyall">Reply All</a></li>
+                      <li><a href="/forward">Forward</a></li>
+                      <li><a href="/delete">Delete</a></li>
+                      <li><a href="/setflag">Set Flag</a></li>
+                    </ul>
+                </div>      
+
+                <h4>Re: Is this phishing?</h4>
+
+                <div class="em-from-div">
+                    <span class="em-dot"><p>JS</p></span>
+                    <h5>
+                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
+                        1/12/22  10:10am
+                    </h5>
+                </div>
+
+                <h5>To: Julie Mooly Cc: Francis Lantis</h5>
+
             </div>
+
 
             <input type="checkbox" id="yesPhishing01" name="phishing" value="0">
             <label for="yesPhishing01"> Suspected phishing Email</label><br>
@@ -187,7 +212,7 @@
         <main>
 
             <div>
-                <P>this is where the quiz email will go</P>
+                <p>this is where the quiz email will go</p>
             </div>
 
             <input type="checkbox" id="yesPhishing02" name="phishing" value="0">
