em-template edits

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                       <li><a href="/replyall">Reply All</a></li>
                       <li><a href="/forward">Forward</a></li>
                       <li><a href="/delete">Delete</a></li>
-                      <li><a href="/setflag">Set Flag</a></li>
+                      <!-- <li><a href="/setflag">Set Flag</a></li> -->
                     </ul>
                 </div>      
 
@@ -175,7 +175,9 @@
                     </h5>
                 </div>
 
-                <h5>To: Julie Mooly Cc: Francis Lantis</h5>
+                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
+                <p><br>hello,</p>
+                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
 
             </div>
 
