Making the calculate answer function

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
             </div>
 
 
-            <input type="checkbox" id="yesPhishing01" name="phishing" value="0">
+            <input class="answers" type="checkbox" id="yesPhishing01" name="phishing" value="1">
             <label for="yesPhishing01"> Suspected phishing Email</label><br>
-            <input type="checkbox" id="noPhishing01" name="notPhishing" value="1">
+            <input class="answers" type="checkbox" id="noPhishing01" name="notPhishing" value="0">
             <label for="noPhishing01">Email appears to be valid</label><br>
 
             <nav data-role="navbar">
@@ -217,9 +217,9 @@
                 <p>this is where the quiz email will go</p>
             </div>
 
-            <input type="checkbox" id="yesPhishing02" name="phishing" value="0">
+            <input type="checkbox" id="yesPhishing02" name="phishing" value="1">
             <label for="yesPhishing02"> Suspected phishing Email</label><br>
-            <input type="checkbox" id="noPhishing02" name="notPhishing" value="1">
+            <input type="checkbox" id="noPhishing02" name="notPhishing" value="0">
             <label for="noPhishing02">Email appears to be valid</label><br>
 
             <nav data-role="navbar">
