Making separate pages

--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
                 be examples of phishing. Your job is to identify the parts of the emails that are suspect and determine
                 the appropriate action.</p>
             <nav data-role="navbar">
+                <!-- #pgQuestion01 -->
 
-                <button><a href="#pgQuestion01" data-icon="bars" class="ui-btn-icon-bottom navView"
+                <button><a href="../Phishing_Quiz/question1.html" data-icon="bars" class="ui-btn-icon-bottom navView"
                         data-transition="fade">Start Quiz</a> </button>
             </nav>
 
