minor change to em-nav li

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
             <div class="em-template">
                 <div class="em-nav">
                     <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
+                      <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
+                      <li><a href="/replyall">Reply All</a></li>
+                      <li><a href="/forward">Forward</a></li>
+                      <li class="ui-icon-delete ui-btn-icon-left"><a href="/delete">Delete</a></li>
+                      <!-- <li><a href="/setflag">Set Flag</a></li> -->
                     </ul>
-                </div>
+                </div>      
 
                 <h4>Re: Is this phishing?</h4>
 
