--- a/email1.html
+++ b/email1.html
@@ -22,7 +22,7 @@
         <!-- </ul>
         </div>       -->
 
-        <h2>Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy & Affordable</h2>
+        <h2 style="padding: 2em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy & Affordable</h2>
 
         <div class="em-from-div">
             <span class="em-dot">
@@ -44,26 +44,26 @@
             ghostwriter to make it to the best-seller's vault. Turn your rough draft into a compelling story today.</p>
         <br>
         
-        <p class="tooltip" style="color: teal; font-size: x-large;"><strong>Chat with Us Now</strong> 
-            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-19ycr-3e8t7z5/ Click or tap to follow link</span>
+        <p class="tooltip" style="color: teal; font-size: large;"><strong>Chat with Us Now</strong> 
+            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ Click or tap to follow link</span>
         </p><br>
 
-        <p  style="color: teal; text-decoration: underline; font-size: x-large"><strong>Call Now (855) 205-1739</strong>
+        <p  style="color: teal; text-decoration: underline; font-size: large"><strong>Call Now (855) 205-1739</strong>
         </p><br>
 
         <div class="tooltip tooltip-button">View Package Price
-            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-19ycr-3e8t7z5/ Click or tap to follow link</span>
+            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click or tap to follow link</span>
         </div><br>
 
         <p  style="text-align: center; font-size: smaller">You are subscribed to this email as <span style="border-bottom: 2px dotted;">juliemooley@mooleycorp.com</span><br>
             Click here to modify your 
             <span class="tooltip" style="color: blue; text-decoration: underline;">preferences
-                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-19ycr-3e8t7z5/ Click or tap to follow link
+                <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/ <br>Click or tap to follow link
                 </span>
         </span> 
         or 
         <span class="tooltip" style="color: blue; text-decoration: underline;">unsubscribe
-            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-19ycr-3e8t7z5/ Click or tap to follow link
+            <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/ <br> Click or tap to follow link
             </span>
         </span>.
         </p><br>
