updated index.html disable jquery mobile

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -22,7 +22,7 @@
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email.css">
+    <link rel="stylesheet" href="../css/email1.css">
 
     <title>Phishing Quiz</title>
 </head>
