--- a/pages/register.html
+++ b/pages/register.html
@@ -61,8 +61,8 @@
    
 </body>
 
-<script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
-<script ref="preload" src="../js/registration.js"></script>
 
+<script ref="preload" src="../js/registration.js"></script>
+<script rel="preload" src="/Phishing_Quiz/js/registration.js"></script>
 
 </html>
