Cleaning up directories

--- a/index.html
+++ b/index.html
@@ -2,31 +2,12 @@
 <html lang="en">
 
 <head>
-
-    <!-- <meta name="viewport"
-        content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" /> -->
-    <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./css/themes/Comic_book_theme_2.css" />
-    <link rel="stylesheet" href="./css/themes/jquery.mobile.icons.min.css" /> -->
-    <!-- <link rel="stylesheet" href="./js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" /> -->
-    <!-- <script src="js/jquery/jquery-1.11.1.min.js"></script> -->
-    <!-- <script rel="preload" src="./js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script> -->
-
-    <!-- jquery cdn files -->
-    <!-- <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script rel="preload" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script rel="preload" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
-    <!-- <link rel="stylesheet" href="./css/email.css"> -->
+    <title>Phishing Quiz</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-
-
-    <title>Phishing Quiz</title>
 </head>
 
 <body class="ui-body">
@@ -42,7 +23,8 @@
                 <p>Welcome to the 227 InfoSec phishing training quiz. You will need to register with your name and
                     email. This registration will be used to record your quiz results. Please select the "Sign Up"
                     button to register.</p>
-                <img class="responsiveImage" width="500" height="400" src="../Phishing_Quiz/images/welcome.jpg" alt="Welcome-logo">
+                <img class="responsiveImage" width="500" height="400" src="../Phishing_Quiz/images/welcome.jpg"
+                    alt="Welcome-logo">
                 <!-- width="300" height="400" -->
             </div>
 
@@ -60,7 +42,6 @@
 
 </body>
 
-<!-- <script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script> -->
 <script rel="preload" src="js/scripts.js"></script>
 
 </html>
