--- a/pages/register.html
+++ b/pages/register.html
@@ -2,34 +2,18 @@
 <html lang="en">
 
 <head>
-
-    <meta name="viewport"
-        content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/themes/Comic_book_theme_2.css" />
-    <link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
-    <link rel="stylesheet" href="../js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" />
-    <!-- <script src="js/jquery/jquery-1.11.1.min.js"></script> -->
-    <script src="../js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
-
-    <!-- jquery cdn files -->
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email.css">
-
+    <link rel="stylesheet" href="./css/style.css">
     <title>Phishing Quiz</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="ui-body">
 
-      <!-- Sign Up Page Start REGISTRATION-->
+    <!-- Sign Up Page Start REGISTRATION-->
     <section data-role="page" id="pgSignUp" data-theme="b" data-fullscreen="true">
         <header data-role="header">
             <h1>User Registration Page</h1>
@@ -46,9 +30,10 @@
                         <label for="Your Email">Email Address</label>
                         <input id="uEmail" type="email">
                     </fieldset>
-<!-- 
+                    <!-- 
                     <a href="./instructions.html"> </a> -->
-                    <button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-action" id="uSignUpBtn" type="submit">Register</button>
+                    <button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-action" id="uSignUpBtn"
+                        type="submit">Register</button>
                     <!-- This should take them to instructions page -->
                 </form>
             </article>
@@ -58,11 +43,11 @@
             <h4>227 InfoSec, Inc. 2022&copy;</h4>
         </footer>
     </section>
-   
+
 </body>
 
 
-<script ref="preload" src="../js/registration.js"></script>
+<!-- <script ref="preload" src="../js/registration.js"></script> -->
 <script rel="preload" src="/Phishing_Quiz/js/registration.js"></script>
 
 </html>
