--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -2,29 +2,12 @@
 <html lang="en">
 
 <head>
-
-    <meta name="viewport"
-        content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/themes/Comic_book_theme_2.css" />
-    <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
-    <link rel="stylesheet" href="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" />
-    <!-- <script src="js/jquery/jquery-1.11.1.min.js"></script> -->
-    <script src="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
-
-    <!-- jquery cdn files -->
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email.css">
-
     <title>Phishing Quiz</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/Phishing_Quiz/css/style.css">
 </head>
 
 <body class="ui-body">
@@ -62,8 +45,7 @@
 
 </body>
 
-<script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="/Phishing_Quiz/js/scripts.js"></script>
 
 
 </html>
