--- a/pages/question2.html
+++ b/pages/question2.html
@@ -2,35 +2,21 @@
 <html lang="en">
 
 <head>
-  <script>window.onbeforeunload = function() { return "Your work will be lost."; };</script>
-    <meta name="viewport"
-        content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/themes/Comic_book_theme_2.css" />
-    <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
-    <link rel="stylesheet" href="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" />
-    <!-- <script src="js/jquery/jquery-1.11.1.min.js"></script> -->
-    <script src="js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
-
-    <!-- jquery cdn files -->
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email.css">
+    <title>Phishing Quiz</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/Phishing_Quiz/css/style.css">
+    <link rel="stylesheet" href="/Phishing_Quiz/css/email1.css">
 
     <title>Phishing Quiz</title>
 </head>
 
 <body class="ui-body">
 
-       <!-- Question #2 -->
-    <section data-theme="b" data-role="page" id="pgQuestion01" data-fullscreen="true">
+    <!-- Question #1 -->
+    <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
             <h3>Question #2</h3>
@@ -70,24 +56,18 @@
                     tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
 
             </div>
-
-            <!-- 
-            <input class="answers answers1" type="checkbox" id="Phishing00" name="phishing" value="A">
-            <label for="Phishing00"> Suspected phishing Email</label><br>
-            <input class="answers answers1" type="checkbox" id="Phishing01" name="notPhishing" value="B">
-            <label for="Phishing01">Email appears to be valid</label><br> -->
-
+           
             <nav data-role="navbar">
 
                 <form action="">
-                    <input type="radio" id="01" name="question1" value="A">
-                    <label for="01">Phishing Email</label><br>
-                    <input type="radio" id="02" name="question1" value="B">
-                    <label for="02">Valid Email</label><br>
+                    <input type="radio" id="11" name="question1" value="A">
+                    <label for="11">Phishing Email</label><br>
+                    <input type="radio" id="12" name="question1" value="B">
+                    <label for="12">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
-                <button id="0" class="answer-btn"><a href="#pgQuestion02" data-icon="bars"
+                <button id="1" class="answer-btn"><a href="question3.html" data-icon="bars"
                         class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
             </nav>
@@ -100,11 +80,9 @@
         </footer>
     </section>
 
- 
+
 </body>
 
-<script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
-<script src="js/scripts.js"></script>
-
+<script src="/Phishing_Quiz/js/scripts.js"></script>
 
 </html>
