--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Welcome to the 227 InfoSec phishing training quiz. You will need to register with your name and
                     email. This registration will be used to record your quiz results. Please select the "Sign Up"
                     button to register.</p>
-                <img class="responsiveImage" width="500" height="400" src="../Phishing_Quiz/images/welcome.jpg"
+                <img class="responsiveImage" width="500" height="400" src="../images/welcome.jpg"
                     alt="Welcome-logo">
                 <!-- width="300" height="400" -->
             </div>
@@ -42,6 +42,6 @@
 
 </body>
 
-<script rel="preload" src="js/scripts.js"></script>
+<script rel="preload" src="./js/scripts.js"></script>
 
 </html>
