--- a/pages/register.html
+++ b/pages/register.html
@@ -48,6 +48,6 @@
 
 
 <!-- <script ref="preload" src="../js/registration.js"></script> -->
-<script rel="preload" src="/Phishing_Quiz/js/registration.js"></script>
+<script rel="preload" src="./Phishing_Quiz/js/registration.js"></script>
 
 </html>
