Updated Path for all pages.

--- a/pages/register.html
+++ b/pages/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Phishing_Quiz/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Phishing Quiz</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -48,6 +48,6 @@
 
 
 <!-- <script ref="preload" src="../js/registration.js"></script> -->
-<script rel="preload" src="./Phishing_Quiz/js/registration.js"></script>
+<script rel="preload" src="../js/registration.js"></script>
 
 </html>
