--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Quiz</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
+    <script src="https:/code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Phishing_Quiz/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="ui-body">
@@ -45,7 +45,7 @@
 
 </body>
 
-<script src="/Phishing_Quiz/js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 
 
 </html>
