--- a/pages/question1.html
+++ b/pages/question1.html
@@ -7,8 +7,8 @@
     <title>Phishing Quiz</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Phishing_Quiz/css/style.css">
-    <link rel="stylesheet" href="/Phishing_Quiz/css/email1.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/email1.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -83,6 +83,6 @@
 
 </body>
 
-<script src="/Phishing_Quiz/js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 
 </html>
