--- a/pages/results.html
+++ b/pages/results.html
@@ -7,7 +7,7 @@
     <title>Phishing Quiz</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Phishing_Quiz/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="ui-body">
@@ -43,7 +43,7 @@
 
 </body>
 
-<script src="/Phishing_Quiz/js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 
 
 </html>
