--- a/pages/question1.html
+++ b/pages/question1.html
@@ -66,10 +66,10 @@
                     <label for="02">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
                 </form>
-
+                
                 <button id="0" class="answer-btn"><a href="question2.html" data-icon="bars"
                         class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button>
-                <!-- Need to record results. Make a function that has a data libaray of results -->
+            
             </nav>
 
         </main>
@@ -83,6 +83,7 @@
 
 </body>
 
-<script ref="preload" src="../js/scripts.js"></script>
+
+<script src="../js/scripts.js"></script>
 
 </html>
