Updating the back feature.

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -67,9 +67,10 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
                 
-                <button id="0" class="answer-btn"><a href="question2.html" data-icon="bars"
-                        class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button>
+                <!-- <button id="0" class="answer-btn"><a href="question2.html" data-icon="bars"
+                        class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button> -->
             
+                        <button id="0" class="answer-btn">Next Question </button>
             </nav>
 
         </main>
