--- a/pages/question2.html
+++ b/pages/question2.html
@@ -67,8 +67,7 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
-                <button id="1" class="answer-btn"><a href="question3.html" data-icon="bars"
-                        class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button>
+                <button id="1" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
             </nav>
 
