--- a/pages/question6.html
+++ b/pages/question6.html
@@ -66,9 +66,9 @@
                     <label for="52">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
                 </form>
-
-                <button id="5" class="answer-btn"><a href="question7.html" data-icon="bars"
-                        class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button>
+                <!-- <a href="question7.html" data-icon="bars"
+                class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> -->
+                <button id="5" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
             </nav>
 
