--- a/pages/question10.html
+++ b/pages/question10.html
@@ -67,7 +67,7 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
-                <button id="9" class="answer-btn"><a href="" data-icon="bars"
+                <button id="9" class="answer-btn"><a href="../pages/results" data-icon="bars"
                         class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
             </nav>
