Updated results function

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -8,6 +8,9 @@
     <script src="https:/code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <script>
+        localStorage.removeItem('userRepo')
+    </script>
 </head>
 
 <body class="ui-body">
@@ -25,6 +28,8 @@
             <p>You will be presented a number of emails. Some of these emails will be legitimate and some of them will
                 be examples of phishing. Your job is to identify the parts of the emails that are suspect and determine
                 the appropriate action.</p>
+
+                <H4>DO NOT HIT THE BACK BUTTON ONCE YOU BEGIN THE TEST, YOUR RESULTS WILL BE LOST</H4>
             <nav data-role="navbar">
                 <!-- #pgQuestion01 -->
 
