--- a/pages/results.html
+++ b/pages/results.html
@@ -22,12 +22,12 @@
 
         <!-- Home Page Body Start -->
         <main>
-            <p>Results will go here</p>
+            <p id="userResults"></p>
             <nav data-role="navbar">
                 <!-- #pgQuestion01 -->
 
-                <button><a href="" data-icon="bars" class="ui-btn-icon-bottom navView"
-                        data-transition="fade">Start Quiz</a> </button>
+                <button id="userResults"><a href="" data-icon="bars" class="ui-btn-icon-bottom navView"
+                        data-transition="fade">Submit Results</a> </button>
             </nav>
 
         </main>
@@ -43,7 +43,7 @@
 
 </body>
 
-<script src="../js/scripts.js"></script>
+<script src="../js/results.js"></script>
 
 
 </html>
