--- a/pages/results.html
+++ b/pages/results.html
@@ -12,7 +12,7 @@
 
 <body class="ui-body">
 
-   
+
     <!-- Results Page -->
     <section data-theme="b" data-role="page" id="pgResults" data-fullscreen="true">
         <!-- Navbar setup Start -->
@@ -22,13 +22,18 @@
 
         <!-- Home Page Body Start -->
         <main>
-            <p id="userResults"></p>
-            <nav data-role="navbar">
-                <!-- #pgQuestion01 -->
+            <form action="mailer.php" class="contact_form" method="post" name="form"></form>
+            <p value="emplinq" id="userResults"></p>
+            <input type="submit" id="send" value="Submit Results">
 
+            </form>
+
+
+            <!-- <nav data-role="navbar">
+               
                 <button id="userResults"><a href="" data-icon="bars" class="ui-btn-icon-bottom navView"
                         data-transition="fade">Submit Results</a> </button>
-            </nav>
+            </nav> -->
 
         </main>
 
@@ -39,7 +44,7 @@
         </footer>
     </section>
 
-   
+
 
 </body>
 
