--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -1,3 +1,4 @@
+<!-- PHISH -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,22 +7,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email 1</title>
+    <title>ghostwriting</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/email1.css">
 </head>
 
 <body>
     <div class="em-template">
-        <!--      <div class="em-nav">
-            <ul>
-              <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-              <li><a href="/replyall">Reply All</a></li>
-              <li><a href="/forward">Forward</a></li>
-              <li class="ui-icon-delete ui-btn-icon-left"><a href="/delete">Delete</a></li> -->
-        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-        <!-- </ul>
-        </div>       -->
 
         <h2 style="padding: 2em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy & Affordable</h2>
 
@@ -36,6 +28,7 @@
         </div>
 
         <h4><br>To: Julie Mooley</h4><br>
+        <div class="body">
         <h1>
             Turn your ideas into a bestselling book with our Professional <br>
         <span style="color: teal;">Ghostwriting Services</span>
@@ -68,6 +61,7 @@
             </span>
         </span>.
         </p><br>
+    </div>
     </div>
 
 </body>
