--- a/email_templates/email2.html
+++ b/email_templates/email2.html
@@ -1,3 +1,5 @@
+<!-- PHISH -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email 1</title>
+    <title>paypal</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/email2.css">
 </head>
@@ -13,15 +15,6 @@
 <body>
 
     <div class="em-template">
-        <!--      <div class="em-nav">
-            <ul>
-              <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-              <li><a href="/replyall">Reply All</a></li>
-              <li><a href="/forward">Forward</a></li>
-              <li class="ui-icon-delete ui-btn-icon-left"><a href="/delete">Delete</a></li> -->
-        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-        <!-- </ul>
-        </div>       -->
 
         <h4 style="padding: 2em 0 0;">
             From: <span class="tooltip" style="color: blue; text-decoration: underline;">PayPal
